Update index.html with sections

--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Landing Page</title>
+    </head>
+    <body>
+        <div><!-- Header Section -->
+            <div><!-- Actual Header -->
+                <h3>Header Logo</h3>
+                <h4>Header link one</h4>
+                <h4>Header link two</h4>
+                <h4>Header link three</h4>
+            </div>
+            <div><!-- Hero Text-->
+                <h2>This website is awesome</h2>
+                <p>Ecem is the cutest ever. I love her. Her presence brings me happiness.
+                </p>
+                <button>Sign Up</button>
+                <img src="/placeholder.png" alt="This is currently a placeholder image." height="50" width="100">
+            </div>
+
+        </div>
+        <div><!-- Multi-image Section-->
+            <h3>Why Baran loves Ecem so much?</h3>
+            <img src="/mult1.png" alt="Mult1" height="50" width="100">
+            <img src="/mult2.png" alt="Mult2" height="50" width="100">
+            <img src="/mult3.png" alt="Mult3" height="50" width="100">
+            <img src="/mult4.png" alt="Mult4" height="50" width="100">
+            <p>Subtext mult1</p>
+            <p>Subtext mult2</p>
+            <p>Subtext mult3</p>
+            <p>Subtext mult4</p>
+        </div>
+        <div><!-- Quote Section -->
+
+        </div>
+        <div><!-- Sign up Section -->
+
+        </div>
+        <div><!-- Footer Section-->
+            <footer>
+
+            </footer>
+        </div>
     
-</body>
+    </body>
 </html>
