--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <div><!-- Hero Text-->
                 <h2>This website is awesome</h2>
-                <p>Ecem is the cutest ever. I love her. Her presence brings me happiness.
+                <p>Ecem is the cutest ever. I love her.
                 </p>
-                <button>Sign Up</button>
+                <button>Sign up</button>
                 <img src="/placeholder.png" alt="This is currently a placeholder image." height="50" width="100">
             </div>
 
@@ -35,14 +35,17 @@
             <p>Subtext mult4</p>
         </div>
         <div><!-- Quote Section -->
-
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin fermentum, orci vel vehicula vulputate, ex erat commodo urna, eget pellentesque libero nibh vel quam. Sed magna neque, venenatis eu sapien nec, dictum rutrum arcu.</p><br>
+            <p><strong>-Thor, God of Thunder</strong></p>
         </div>
         <div><!-- Sign up Section -->
-
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button over there!</p>
+            <button>Sign up</button>
         </div>
         <div><!-- Footer Section-->
             <footer>
-
+                <p>Copyright Text</p>
             </footer>
         </div>
     
