Add styling for Header

--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
         <title>Landing Page</title>
     </head>
     <body>
-        <div><!-- Header Section -->
-            <div><!-- Actual Header -->
-                <h3>Header Logo</h3>
-                <h4>Header link one</h4>
-                <h4>Header link two</h4>
-                <h4>Header link three</h4>
+        <div class="Header_Section"><!-- Header Section -->
+            <div class="Header"><!-- Actual Header -->
+                <h3 id="Header_Logo">Header Logo</h3>
+                <div id="Right_Links">
+                    <h4>Header link one</h4>
+                    <h4>Header link two</h4>
+                    <h4>Header link three</h4>
+                </div>
             </div>
             <div><!-- Hero Text-->
                 <h2>This website is awesome</h2>
