Add images, update index, update stylesheet

--- a/index.html
+++ b/index.html
@@ -20,31 +20,39 @@
                     <h4>Header link three</h4>
                 </div>
             </div>
-            <div><!-- Hero Text-->
-                <h2>This website is awesome</h2>
-                <p>Ecem is the cutest ever. I love her.
-                </p>
-                <button>Sign up</button>
-                <img src="/placeholder.png" alt="This is currently a placeholder image." height="50" width="100">
+            <div class="Hero_Text_Section"><!-- Hero Text-->
+                <div id="Left_Hero_Text">
+                    <h2 id="Hero_Text">This website is gonna be awesome</h2>
+                    <p>These houses are from Greece! They would be great to stay in in a vacation. The cultural significance of these houses make them the perfect place for a small 1-7 day vacation. 
+                    </p>
+                    <button id="Sign_Up_Hero">Sign up</button>
+                </div>
+                <div id="Right_Image">
+                    <img src="Houses.jpg" alt="This is currently a placeholder image." height="375" width="410">
+                </div>
             </div>
 
         </div>
-        <div><!-- Multi-image Section-->
-            <h3>Why Baran loves Ecem so much?</h3>
-            <img src="/mult1.png" alt="Mult1" height="50" width="100">
-            <img src="/mult2.png" alt="Mult2" height="50" width="100">
-            <img src="/mult3.png" alt="Mult3" height="50" width="100">
-            <img src="/mult4.png" alt="Mult4" height="50" width="100">
+        <div class="Multi_Section"><!-- Multi-image Section-->
+            <div id="Title_Mult">
+                <h3>Why Baran loves Ecem so much?</h3>
+            </div>
+            <div id="Img_Mult">
+            <img class="Images" src="Dog_612x612.jpg" alt="Mult1" height="50" width="100">
+            <img class="Images" src="Dog_612x612.jpg" alt="Mult2" height="50" width="100">
+            <img class="Images" src="Dog_612x612.jpg" alt="Mult3" height="50" width="100">
+            <img class="Images" src="Dog_612x612.jpg" alt="Mult4" height="50" width="100">
             <p>Subtext mult1</p>
             <p>Subtext mult2</p>
             <p>Subtext mult3</p>
             <p>Subtext mult4</p>
+            </div>
         </div>
-        <div><!-- Quote Section -->
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin fermentum, orci vel vehicula vulputate, ex erat commodo urna, eget pellentesque libero nibh vel quam. Sed magna neque, venenatis eu sapien nec, dictum rutrum arcu.</p><br>
-            <p><strong>-Thor, God of Thunder</strong></p>
+        <div class="Quote_Section"><!-- Quote Section -->
+            <p id="Quote_Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin fermentum, orci vel vehicula vulputate, ex erat commodo urna, eget pellentesque libero nibh vel quam. Sed magna neque, venenatis eu sapien nec, dictum rutrum arcu.</p><br>
+            <p id="Thor"><strong>-Thor, God of Thunder</strong></p>
         </div>
-        <div><!-- Sign up Section -->
+        <div class="Sign_Up_Section"><!-- Sign up Section -->
             <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button over there!</p>
             <button>Sign up</button>
