Update index and stylesheet

--- a/index.html
+++ b/index.html
@@ -23,34 +23,44 @@
             <div class="Hero_Text_Section"><!-- Hero Text-->
                 <div id="Left_Hero_Text">
                     <h2 id="Hero_Text">This website is gonna be awesome</h2>
-                    <p>These houses are from Greece! They would be great to stay in in a vacation. The cultural significance of these houses make them the perfect place for a small 1-7 day vacation. 
+                    <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.
                     </p>
-                    <button id="Sign_Up_Hero">Sign up</button>
+                    <button id="Sign_Up_Hero"><b>Sign up</b></button>
                 </div>
                 <div id="Right_Image">
-                    <img src="Houses.jpg" alt="This is currently a placeholder image." height="375" width="410">
+                    <img id="Houses" src="Houses.jpg" alt="This is currently a placeholder image." height="375" width="410">
                 </div>
             </div>
 
         </div>
         <div class="Multi_Section"><!-- Multi-image Section-->
             <div id="Title_Mult">
-                <h3>Why Baran loves Ecem so much?</h3>
+                <h3 id="Information_Header_Text">Some Random Information</h3>
             </div>
             <div id="Img_Mult">
-            <img class="Images" src="Dog_612x612.jpg" alt="Mult1" height="50" width="100">
-            <img class="Images" src="Dog_612x612.jpg" alt="Mult2" height="50" width="100">
-            <img class="Images" src="Dog_612x612.jpg" alt="Mult3" height="50" width="100">
-            <img class="Images" src="Dog_612x612.jpg" alt="Mult4" height="50" width="100">
-            <p>Subtext mult1</p>
-            <p>Subtext mult2</p>
-            <p>Subtext mult3</p>
-            <p>Subtext mult4</p>
+                <div class="Container_Image_Text">
+                    <img class="Images" src="Dog_612x612.jpg" alt="Mult1">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="Container_Image_Text">
+                    <img class="Images" src="Dog_612x612.jpg" alt="Mult1">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="Container_Image_Text">
+                    <img class="Images" src="Dog_612x612.jpg" alt="Mult1">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="Container_Image_Text">
+                    <img class="Images" src="Dog_612x612.jpg" alt="Mult1">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
             </div>
         </div>
         <div class="Quote_Section"><!-- Quote Section -->
-            <p id="Quote_Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin fermentum, orci vel vehicula vulputate, ex erat commodo urna, eget pellentesque libero nibh vel quam. Sed magna neque, venenatis eu sapien nec, dictum rutrum arcu.</p><br>
-            <p id="Thor"><strong>-Thor, God of Thunder</strong></p>
+            <div id="Quote_Text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin fermentum, orci vel vehicula vulputate, ex erat commodo urna, eget pellentesque libero nibh vel quam. Sed magna neque, venenatis eu sapien nec, dictum rutrum arcu.</p>
+                <p id="Thor"><strong>-Thor, God of Thunder</strong></p>
+            </div>
         </div>
         <div class="Sign_Up_Section"><!-- Sign up Section -->
             <h3>Call to action! It's time!</h3>
